fixed overflow problems with the new navbar

--- a/css/base.css
+++ b/css/base.css
@@ -11,6 +11,14 @@ body {
 	color: var(--text-color);
 }
 
+div.bodydiv{
+	overflow-x: hidden;
+}
+
+div.bodydiv > div.container {
+	overflow-x: auto;
+}
+
 /* NAVBAR STUFF */
 
 nav.navbar {
